--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "@babel/preset-react": "^7.10.4",
     "@babel/runtime": "^7.11.2",
     "@headlessui/react": "^1.0.0",
-    "@radix-ui/react-popover": "^0.1.0",
     "@radix-ui/react-context-menu": "^0.1.0",
     "@radix-ui/react-dialog": "^0.1.0",
     "@radix-ui/react-dropdown-menu": "^0.1.0",
+    "@radix-ui/react-popover": "^0.1.0",
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
@@ -57,12 +57,12 @@
     "@types/lodash": "^4.14.172",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
     "babel-plugin-add-react-displayname": "^0.0.5",
     "babel-plugin-macros": "^2.8.0",
     "css-loader": "^5.0.1",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "msw": "^0.35.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.35",
     "postcss-import": "^12.0.1",
