--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "NODE_ENV=production rollup -c",
     "build-watch": "NODE_ENV=production rollup -c -w",
     "test": "react-scripts test",
+    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "build:icons": "node --experimental-modules internals/populate-icons.js",
@@ -53,7 +54,7 @@
     "@tailwindcss/typography": "^0.3.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
-    "@testing-library/user-event": "^12.1.7",
+    "@testing-library/user-event": "^12.8.3",
     "@types/lodash": "^4.14.172",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
